[package]
name = "recipe-book-backend"
version = "0.1.0"
authors = ["Austin Ray <austin@austinray.io>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
env_logger = "0.8.3"
log = "0.4"
r2d2 = "0.8.9"
r2d2_sqlite = "0.17.0"
rusqlite = "0.24.2"
serde = "1.0"
serde_json = "1.0"
